@@ -85,6 +85,7 @@ Version 0.10
 ============
 
 2008-02-05      - [cjm] removed default assumption that entire colset can function as UC
+2008-02-05      - [cjm] use placeholders for inserts
 
 
 
